--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link rel="sortcut icon" href="img/icon/favicon.svg" type="image/x-icon" />
   <title>Leonardo Amaral - Desenvolvedor web, Criação de sites</title>
+  <script>document.documentElement.className += ' js';</script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <a href="#"><img src="img/logo-oficial.png" alt="Logo Oficial Leonardo Amaral"></a>
 
     <!-- MENU -->
-    <nav class="header-menu">
+    <nav class="header-menu js-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#servicos">Serviços</a></li>
@@ -34,7 +35,7 @@
     </section>
 
     <!-- SERVIÇOS -->
-    <section class="service" id="#servicos">
+    <section class="service" id="servicos">
       <h1>O que faço</h1>
 
       <div class="service-list">
@@ -67,7 +68,7 @@
     </section>
 
     <!-- SOBRE -->
-    <section class="about" id="#sobre">
+    <section class="about" id="sobre">
       <img src="img/foto-perfil.jpg" alt="Leonardo Amaral">
       <div class="about-info">
         <h1>Sobre mim</h1>
@@ -86,7 +87,7 @@
     </section> -->
 
     <!-- CONTATO -->
-    <section class="contact-main" id="#contato">
+    <section class="contact-main" id="contato">
       <h1>Contato</h1>
       <p>O site ainda é o maior cartao de visitas que você pode dar ao seu cliente na internet.</br> Além disso, dá mais credibilidade e torna o seu negócio ainda mais profissional.</p>
 
@@ -111,7 +112,7 @@
       <div class="footer-social">
         <a href="https://www.facebook.com/leoamaraldev" target="_blank"><img src="img/icon/facebook.svg" alt="Facebook"></a>
         <a href="https://www.instagram.com/leoamaral_dev/" target="_blank"><img src="img/icon/instagram.svg" alt="Instagram"></a>
-        <!-- <a href="http://github.com/"><img src="img/icon/" alt="Github"></a> -->
+        <a href="https://github.com/hangtime319" target="_blank"><img src="img/icon/github-icon.svg" alt="Github"></a>
         <a href="https://www.linkedin.com/leo-amaral-brito/" target="_blank"><img src="img/icon/linkedin.svg" alt="Linkedin"></a>
       </div>
     </div>
@@ -121,6 +122,9 @@
       <p>Criado e Desenvolvido por Leonardo Amaral - Desenvolvedor Web</p>
     </div>
   </footer>
+
+  <!-- JAVASCRIPT -->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
