Atualização de arquivos js, css e index.html
Adicionei um efeito de animação ao scroll na página Index.
Efeito aplicado com javascript e css.
Ao rolar a página, as seções aparecem com efeito de slide.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
   <main>
     <!-- INTRODUÇÃO -->
-    <section class="intro">
+    <section class="intro js-scroll">
       <h1>LEONARDO AMARAL</h1>
       <p>Desenvolvedor front-end e</br> web designer</p>
     </section>
 
     <!-- SERVIÇOS -->
-    <section class="service" id="servicos">
+    <section class="service js-scroll" id="servicos">
       <h1>O que faço</h1>
 
       <div class="service-list">
@@ -68,7 +68,7 @@
     </section>
 
     <!-- SOBRE -->
-    <section class="about" id="sobre">
+    <section class="about js-scroll" id="sobre">
       <img src="img/foto-perfil.jpg" alt="Leonardo Amaral">
       <div class="about-info">
         <h1>Sobre mim</h1>
@@ -87,7 +87,7 @@
     </section> -->
 
     <!-- CONTATO -->
-    <section class="contact-main" id="contato">
+    <section class="contact-main js-scroll" id="contato">
       <h1>Contato</h1>
       <p>O site ainda é o maior cartao de visitas que você pode dar ao seu cliente na internet.</br> Além disso, dá mais credibilidade e torna o seu negócio ainda mais profissional.</p>
 
